@@ -6,7 +6,8 @@ all:	libspoton.o
 
 libspoton.o:	libspoton.c libspoton.h
 	gcc $(CFLAGS) -fPIC -fstack-protector-all \
-	-Wall -Werror -Wextra -Wpointer-arith \
+	-Wall -Wconversion -Werror -Wextra -Wpointer-arith \
+	-Wsign-conversion \
 	-Wstack-protector -Wstrict-overflow=5 -Wstrict-prototypes \
 	-c -o libspoton.o libspoton.c
 
