@@ -9,6 +9,7 @@
 7.   Upgraded OpenSSL products to version 1.0.2a on Windows.
 8.   Ignore duplicate keywords in link searching.
 9.   Corrected isEncrypted() use in spoton_neighbor::saveStatus().
+10.  Corrected throw clauses. Removed redundant try-catch blocks.
 
 0.20 (03/14/2015)
 
